added the search by email
